fix: preset filter being cropped by a small screen

--- a/src/app/component/filter/preset-filter/preset-filter.component.css
+++ b/src/app/component/filter/preset-filter/preset-filter.component.css
@@ -13,3 +13,7 @@ a {
 table tr td {
   padding-bottom: 2px;
 }
+.pull-right>.dropdown-menu {
+  left: 0;
+  right: auto;
+}
